kdevplatform/debugger/breakpoint/breakpointmodel.h
@@ -163,7 +163,8 @@ private:
 private Q_SLOTS:
     void markChanged(KTextEditor::Document *document, KTextEditor::Mark mark, KTextEditor::MarkInterface::MarkChangeAction action);
     void textDocumentCreated(KDevelop::IDocument*);
-    void aboutToReload(KTextEditor::Document* document);
+    void aboutToReload();
+    void aboutToInvalidateMovingInterfaceContent(KTextEditor::Document* document);
     void reloaded(KTextEditor::Document* document);
     void documentSaved(KDevelop::IDocument*);
     void aboutToDeleteMovingInterfaceContent(KTextEditor::Document *document);
@@ -196,9 +197,9 @@ private:
     ScopedIncrementor markChangeGuard();
 
     /**
-     * Check if a document contains any breakpoint marks.
+     * Remove all breakpoint marks from @p document.
      */
-    static bool containsBreakpointMarks(const KTextEditor::Document& document);
+    void removeBreakpointMarks(const KTextEditor::Document& document);
 
     /**
      * Initialize breakpoint marks and moving cursors in a given document.
